Fix: Put dialog to open center top instead of center middle
If the jstree is too big vertically the middle page will be strictly
outisde of bounds of the user view, which means the dialog will open and the
page will scroll to the middle and depending on the size of the page this can
become confuse. Also, it sets z-index so the dialog will always be  in front of
the page

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -339,3 +339,7 @@ iframe{
 .enable_div {
     display: inline;
 }
+
+.ui-dialog {
+    z-index: 9999 !important ;
+}
